KUDU-2870: allow super-user to skip authz checks in Checksum

In order to allow for the Kudu CLI to run a checksum scan (a process
which currently doesn't fetch an authz token from the Master), this
patch allows Checksum to proceed if the requesting user is a super-user.

Testing:
- A test is added to run the CLI against a tserver that enforces
  fine-grained access control.
- A new test is added to test the super-user permissions for the
  Checksum endpoint.

Change-Id: I9da21f41702da747a081ab037d75865748d981a8
Reviewed-on: http://gerrit.cloudera.org:8080/13681
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
Tested-by: Kudu Jenkins
(cherry picked from commit 2c0161db1117d27bb4c2961901dfc54b76437dc9)
Reviewed-on: http://gerrit.cloudera.org:8080/13686
Tested-by: Grant Henke <granthenke@apache.org>